# clawcal

./: .gitignore  CLAUDE.md  LICENSE  README.md  clawcal.sh  com.clawcal.server.plist  pyproject.toml
docs/superpowers/plans/: 2026-04-02-observability.md  2026-04-03-async-job-queue.md  2026-04-03-code-review-fixes.md  2026-04-03-fix-mcp-session-management.md  2026-04-03-osint-coveo.md
docs/superpowers/specs/: 2026-04-02-observability-design.md  2026-04-03-async-job-queue-design.md  2026-04-03-osint-coveo-design.md
src/: agent.py  health.py  llm_client.py  server.py  task_manager.py  tool_registry.py
src/observability/: __init__.py  collector.py  cost_estimator.py  events.py  logger.py  store.py
src/tools/: __init__.py  base.py  bash.py  edit_file.py  glob_tool.py  grep_tool.py  list_directory.py  read_file.py  write_file.py
tests/: test_agent.py  test_collector.py  test_cost_estimator.py  test_events.py  test_health.py  test_http_integration.py  test_llm_client.py  test_logger.py  test_server.py  test_sse_integration.py  test_store.py  test_task_manager.py  test_tool_registry.py  test_tools.py
