[project]
name = "clawcal"
version = "0.1.0"
description = "Local coding agent MCP server powered by Ollama"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
    "starlette>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
clawcal = "src.server:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
